--- a/Microsoft.Windows.Toolkit/Microsoft.Windows.Toolkit.csproj
+++ b/Microsoft.Windows.Toolkit/Microsoft.Windows.Toolkit.csproj
@@ -49,11 +49,11 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helpers\Helpers.Color.cs" />
+    <Compile Include="ColorHelper.cs" />
     <Compile Include="Helpers\Helpers.Connections.cs" />
     <Compile Include="Helpers\Helpers.StorageFile.cs" />
-    <Compile Include="Helpers\StreamIO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StreamHelper.cs" />
     <EmbeddedResource Include="Properties\Microsoft.Windows.Toolkit.rd.xml" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
