--- a/Microsoft.Windows.Toolkit.Notifications.UWP/Microsoft.Windows.Toolkit.Notifications.UWP.csproj
+++ b/Microsoft.Windows.Toolkit.Notifications.UWP/Microsoft.Windows.Toolkit.Notifications.UWP.csproj
@@ -34,7 +34,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
+    <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP;ANNIVERSARY_UPDATE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\Microsoft.Windows.Toolkit.Notifications.XML</DocumentationFile>
