--- a/Microsoft.Windows.Toolkit.SampleApp/Microsoft.Windows.Toolkit.SampleApp.csproj
+++ b/Microsoft.Windows.Toolkit.SampleApp/Microsoft.Windows.Toolkit.SampleApp.csproj
@@ -207,7 +207,7 @@
     <Content Include="SamplePages\Bing Service\icon.png" />
     <Content Include="SamplePages\Carousel\icon.jpg" />
     <Content Include="SamplePages\Carousel\CarouselCode.bind" />
-    <Content Include="SamplePages\FlipTile\icon.jpg" />
+    <Content Include="SamplePages\RotatorTile\icon.jpg" />
     <Content Include="SamplePages\LiveTile\icon.jpg" />
     <Content Include="SamplePages\Toast\icon.jpg" />
     <Content Include="SamplePages\Twitter Service\TwitterCode.bind" />
@@ -256,7 +256,7 @@
     <None Include="readme.md" />
     <Content Include="SamplePages\LiveTile\LiveTileCode.bind" />
     <Content Include="SamplePages\Toast\ToastCode.bind" />
-    <Content Include="SamplePages\FlipTile\FlipTileCode.bind" />
+    <Content Include="SamplePages\RotatorTile\RotatorTileCode.bind" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -286,8 +286,8 @@
     <Compile Include="SamplePages\Carousel\CarouselPage.xaml.cs">
       <DependentUpon>CarouselPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SamplePages\FlipTile\FlipTilePage.xaml.cs">
-      <DependentUpon>FlipTilePage.xaml</DependentUpon>
+    <Compile Include="SamplePages\RotatorTile\RotatorTilePage.xaml.cs">
+      <DependentUpon>RotatorTilePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="SamplePages\LiveTile\LiveTilePage.xaml.cs">
       <DependentUpon>LiveTilePage.xaml</DependentUpon>
@@ -390,7 +390,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="SamplePages\FlipTile\FlipTilePage.xaml">
+    <Page Include="SamplePages\RotatorTile\RotatorTilePage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
