--- a/Microsoft.Windows.Toolkit.UI.Controls/Microsoft.Windows.Toolkit.UI.Controls.csproj
+++ b/Microsoft.Windows.Toolkit.UI.Controls/Microsoft.Windows.Toolkit.UI.Controls.csproj
@@ -68,7 +68,7 @@
     <Compile Include="ImageEx\ImageEx.Members.cs" />
     <Compile Include="ImageEx\ImageEx.Placeholder.cs" />
     <Compile Include="ImageEx\ImageEx.Source.cs" />
-    <Compile Include="LiveTile\LiveTile.cs" />
+    <Compile Include="RotatorTile\RotatorTile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PullToRefreshListView\PullToRefreshListView.cs" />
     <Compile Include="PullToRefreshListView\RefreshProgressEventArgs.cs" />
@@ -101,7 +101,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="LiveTile\LiveTile.xaml">
+    <Page Include="RotatorTile\RotatorTile.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
