--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -74,7 +74,7 @@
     <Compile Include="MarkdownTextBlock\Helpers\Common.cs" />
     <Compile Include="MarkdownTextBlock\Helpers\DebuggingReporter.cs" />
     <Compile Include="MarkdownTextBlock\OnLinkClickedArgs.cs" />
-    <Compile Include="MarkdownTextBlock\OnMarkdownReadyArgs.cs" />
+    <Compile Include="MarkdownTextBlock\OnMarkdownRenderedArgs.cs" />
     <Compile Include="MarkdownTextBlock\MarkdownTextBlock.cs" />
     <Compile Include="MarkdownTextBlock\Parse\Blocks\CodeBlock.cs" />
     <Compile Include="MarkdownTextBlock\Parse\Blocks\HeaderBlock.cs" />
