--- a/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
@@ -272,7 +272,7 @@
     <Content Include="SamplePages\Object Storage\ObjectStorage.png" />
     <Content Include="SamplePages\SurfaceDialTextboxHelper\SurfaceDialTextboxHelper.png" />
     <Content Include="SamplePages\TextBoxMask\TextBoxMask.png" />
-    <Content Include="SamplePages\TextBoxRegexEx\TextBoxRegexEx.png" />
+    <Content Include="SamplePages\TextBoxRegexEx\TextBoxRegex.png" />
     <Content Include="SamplePages\Toast\icon.jpg" />
     <Content Include="SamplePages\Twitter Service\TwitterCode.bind" />
     <Content Include="SamplePages\Twitter Service\icon.png" />
@@ -350,7 +350,7 @@
     <Content Include="SamplePages\MasterDetailsView\MasterDetailsViewCode.bind" />
     <Content Include="SamplePages\Microsoft Translator Service\MicrosoftTranslatorCode.bind" />
     <Content Include="SamplePages\AdvancedCollectionView\AdvancedCollectionView.bind" />
-    <Content Include="SamplePages\TextBoxRegexEx\TextBoxRegexEx.bind" />
+    <Content Include="SamplePages\TextBoxRegexEx\TextBoxRegex.bind" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -468,8 +468,8 @@
     <Compile Include="SamplePages\TextBoxMask\TextBoxMaskPage.xaml.cs">
       <DependentUpon>TextBoxMaskPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SamplePages\TextBoxRegexEx\TextBoxRegexExPage.xaml.cs">
-      <DependentUpon>TextBoxRegexExPage.xaml</DependentUpon>
+    <Compile Include="SamplePages\TextBoxRegexEx\TextBoxRegexPage.xaml.cs">
+      <DependentUpon>TextBoxRegexPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="SamplePages\Toast\ToastPage.xaml.cs">
       <DependentUpon>ToastPage.xaml</DependentUpon>
@@ -675,7 +675,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="SamplePages\TextBoxRegexEx\TextBoxRegexExPage.xaml">
+    <Page Include="SamplePages\TextBoxRegexEx\TextBoxRegexPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
